--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ jsonschema==3.2.0
 JsonSir==0.0.2
 MarkupSafe==1.1.1
 nose==1.3.7
+psycopg2==2.8.6
 pyrsistent==0.17.3
 Python-EasyConfig==0.1.7
 pytz==2020.4
